--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,33 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".main.MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayoutMain"
-        android:layout_width="match_parent"
+
+    <Button
+        android:id="@+id/btnMainMenuManagement"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabLayoutMain"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="1dp"
-            app:tabGravity="fill"
-            app:tabMode="fixed"
-            android:background="@color/white"
-            app:tabTextColor="@color/black"
-            app:tabSelectedTextColor="@color/teal_700"/>
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <FrameLayout
-        android:id="@+id/frameLayoutMain"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutMain"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="메뉴 관리"
+        app:layout_constraintBottom_toTopOf="@+id/btnMainSellManagement"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="spread"/>
 
+    <Button
+        android:id="@+id/btnMainSellManagement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="판매"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnMainMenuManagement"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
