--- a/app/src/main/res/layout/activity_menu_management.xml
+++ b/app/src/main/res/layout/activity_menu_management.xml
@@ -36,14 +36,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnMenuDeleteAll" />
+        app:layout_constraintTop_toBottomOf="@+id/imageViewMenuAdd" />
 
-    <Button
-        android:id="@+id/btnMenuDeleteAll"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="전체 삭제"
-        app:layout_constraintEnd_toStartOf="@+id/imageViewMenuAdd"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutMenu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
