--- a/app/src/main/res/layout/recyclerview_menu_insert_stock.xml
+++ b/app/src/main/res/layout/recyclerview_menu_insert_stock.xml
@@ -25,6 +25,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/minus_sign"
+        android:contentDescription="수량 감소"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/editTextMenuInsertStockCount"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -51,6 +52,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/add_sign"
+        android:contentDescription="수량 증가"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/editTextMenuInsertStockCount"
