--- a/app/src/main/res/layout/activity_sell_management.xml
+++ b/app/src/main/res/layout/activity_sell_management.xml
@@ -23,6 +23,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:contentDescription="구매"
         android:src="@drawable/sell_purchase"
         app:layout_constraintEnd_toStartOf="@id/imageViewSellMenuList"
         app:layout_constraintTop_toTopOf="parent" />
