--- a/app/src/main/res/layout/recyclerview_menu_insert_stock.xml
+++ b/app/src/main/res/layout/recyclerview_menu_insert_stock.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="8dp"
         android:background="@color/white"
         android:inputType="none"
+        android:enabled="false"
         android:text=""
         android:textAlignment="center"
         android:textColor="@color/black"
