--- a/app/src/main/res/layout/recyclerview_sell_menu_list.xml
+++ b/app/src/main/res/layout/recyclerview_sell_menu_list.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@color/white"
+        android:enabled="false"
         android:inputType="none"
         android:text=""
         android:textAlignment="center"
@@ -29,6 +30,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@color/white"
+        android:enabled="false"
         android:inputType="none"
         android:text=""
         android:textAlignment="center"
@@ -56,6 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:inputType="none"
+        android:enabled="false"
         android:background="@color/white"
         android:textColor="@color/black"
         android:text=""
